--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import com.sun.tools.javac.Main
-
 plugins {
     id 'application'
 }
@@ -16,6 +14,7 @@ repositories {
 
 dependencies {
     implementation 'org.jgrapht:jgrapht-core:1.5.2-SNAPSHOT'
+    implementation 'com.google.guava:guava:31.1-jre'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
