--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,9 @@ repositories {
 
 dependencies {
     implementation 'org.jgrapht:jgrapht-core:1.5.2'
+    implementation 'org.jgrapht:jgrapht-io:1.5.2'
     implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'info.picocli:picocli:4.7.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
