--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'info.picocli:picocli:4.7.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation("org.assertj:assertj-core:3.24.2")
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
