Force java 17 in gradle

--- a/build.gradle
+++ b/build.gradle
@@ -29,3 +29,9 @@ test {
 application {
     getMainClass().set('org.example.Main')
 }
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
